Bug 9763 - Schema does not prevent deleting of the objectGUID
Summary: Schema does not prevent deleting of the objectGUID
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.0
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.0.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks: 10077
  Show dependency treegraph
 
Reported: 2013-04-03 23:56 UTC by Gavin S
Modified: 2014-07-17 18:55 UTC (History)
1 user (show)

See Also:


Attachments
Temporary patch for v4-1-test (1.59 KB, patch)
2014-07-08 17:25 UTC, Stefan Metzmacher
abartlet: review+
Details
Patch for v4-1-test (1.70 KB, patch)
2014-07-09 14:58 UTC, Stefan Metzmacher
metze: review+
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gavin S 2013-04-03 23:56:33 UTC
Currently the schema prevents the change of the objectGUID, but it does not prevent the deletion of one.

The fix for an accidentally deleted objectGUID involves using tdbtool on an ldb file, which I'm pretty sure is a bad idea in the general case.
Comment 1 Stefan Metzmacher 2014-07-08 17:25:16 UTC
Created attachment 10090 [details]
Temporary patch for v4-1-test

Once I got the master for through autobuild,
I can upload the patches with cherry-pick -x information,
but the content will be the same so this can be reviewed now.
Comment 2 Stefan Metzmacher 2014-07-09 14:58:18 UTC
Created attachment 10095 [details]
Patch for v4-1-test

The same as the temporary patch with cherry-pick information
Comment 3 Stefan Metzmacher 2014-07-15 10:46:18 UTC
Pushed to autobuild-v4-1-test.
Comment 4 Karolin Seeger 2014-07-17 18:55:58 UTC
Pushed to v4-1-test.
Closing out bug report.

Thanks!